salesforce/force-app/main/default/objects/Meeting_Prep__c/Meeting_Prep__c.object-meta.xml
<CustomObject>
    <label>Meeting Prep</label>
    <pluralLabel>Meeting Preps</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Prep Number</label>
        <displayFormat>Prep-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>