salesforce/force-app/main/default/objects/Meeting_Prep__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Preps</relationshipLabel>
    <relationshipName>Meeting_Preps</relationshipName>
</CustomField>