salesforce/force-app/main/default/objects/Meeting_Prep__c/fields/Brief__c.field-meta.xml
<CustomField>
    <fullName>Brief__c</fullName>
    <label>Brief</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>