salesforce/force-app/main/default/objects/Meeting_Prep__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>