salesforce/force-app/main/default/objects/Meeting_Prep__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Text</type>
    <length>50</length>
</CustomField>