salesforce/force-app/main/default/objects/Meeting_Prep__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <type>Text</type>
    <length>255</length>
</CustomField>